retrieveUnpackaged/objects/Forms__c.object
<CustomObject>
    <fields>
        <fullName>AWL_Phone_Number__c</fullName>
        <description>EPA-100</description>
        <label>AWL Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>A_Description__c</fullName>
        <defaultValue>&quot;I hereby apply for membership in the EPA Leave Bank. I authorize EPA to deduct one pay period accrual of annual leave (or such other amount as the Agency’s Leave Bank Board has established for this enrollment period) each leave year for deposit into the EPA Leave Bank until I terminate my membership.&quot;</defaultValue>
        <description>EPA3160-6v5</description>
        <label>Description</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>A__c</fullName>
        <defaultValue>false</defaultValue>
        <description>EPA3160-6v5</description>
        <label>A. New Member Enrollment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Action_Information__c</fullName>
        <defaultValue>&quot;Does this action involve the collection, generation, use, and/or reporting of environmental data; the design, construction, and operation of environmental technologies; or development of software, models, or methods?&quot;</defaultValue>
        <description>ORD-111</description>
        <label>Action Information</label>
        <length>256</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Additional_Data_Required__c</fullName>
        <description>PRIAv5</description>
        <label>Additional Data Required:</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Product Chemistry</fullName>
                </value>
                <value>
                    <fullName>Efficacy</fullName>
                </value>
                <value>
                    <fullName>Toxicology</fullName>
                </value>
                <value>
                    <fullName>Ecological</fullName>
                </value>
                <value>
                    <fullName>Acute Tox</fullName>
                </value>
                <value>
                    <fullName>Residue</fullName>
                </value>
                <value>
                    <fullName>Environmental</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Additional_Reviewer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ORD-111</description>
        <label>Additional Reviewer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>FormsORD111AdditionalReviewer</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Admin_Program_Printed_Name__c</fullName>
        <description>EPA-3110-1</description>
        <label>Admin/Program (Printed Name)</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>After_Award_Documentation__c</fullName>
        <defaultValue>&quot;(Competitive Vehicles, Non-Competitive Vehicles, Intramural)&quot;</defaultValue>
        <description>ORD-111</description>
        <label>After Award Documentation</label>
        <length>65</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Agency_subelement_submitting_office__c</fullName>
        <defaultValue>&quot;EPA00&quot;</defaultValue>
        <description>SF-182</description>
        <label>Agency, Subelement, Submitting Office #</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>All_Personel_Printed_Name_Part_F__c</fullName>
        <description>EPA-3100-1</description>
        <label>All Personel (Printed Name)</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Allowance_Holder__c</fullName>
        <description>FCO Appointment</description>
        <label>Allowance Holder</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Anticipated_Annual_Maintenance_Costs__c</fullName>
        <label>Anticipated Annual Maintenance Costs</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Anticipated_Development_Costs__c</fullName>
        <description>Application Approval</description>
        <label>Anticipated Development Costs</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Anticipated_Operation_Cost__c</fullName>
        <description>Application Approval</description>
        <label>Anticipated Operation Cost</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Applicant_Name_Last_First_MI2__c</fullName>
        <description>SF-182</description>
        <formula>IF(ISBLANK(
IF( ISBLANK( Prepare_Form_for__c ),
Type_1_Owner_Contact__r.FirstName &amp;&quot; &quot;&amp; Type_1_Owner_Contact__r.LastName,
 Prepare_Form_for__r.FirstName &amp;&quot; &quot;&amp;Prepare_Form_for__r.LastName
)),
&quot;[This field will populate after save.]&quot;,
IF( ISBLANK( Prepare_Form_for__c ),
Type_1_Owner_Contact__r.FirstName &amp;&quot; &quot;&amp; Type_1_Owner_Contact__r.LastName,
 Prepare_Form_for__r.FirstName &amp;&quot; &quot;&amp;Prepare_Form_for__r.LastName
))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Applicant Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Application_Acronym__c</fullName>
        <description>Application Approval</description>
        <label>Application Acronym</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Application_Business_Process__c</fullName>
        <description>Application Approval</description>
        <label>Application Business Process</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Application_Description__c</fullName>
        <description>Application Approval</description>
        <label>Application Description</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Application_Frequency__c</fullName>
        <description>Application Approval</description>
        <label>Application Frequency</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Application_Method_Type__c</fullName>
        <description>Application Approval</description>
        <label>Application Method Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Application_Name__c</fullName>
        <description>Application Approval</description>
        <label>Application Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Application_Objective__c</fullName>
        <description>Application Approval</description>
        <label>Application Objective</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Application_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Application Owner</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Forms (Application Owner)</relationshipLabel>
        <relationshipName>Forms_Application_Owner</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Application_Platform__c</fullName>
        <description>Application Approval</description>
        <label>Application Platform</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Atlassian Jira or Confluence</fullName>
                </value>
                <value>
                    <fullName>Central Data Exchange</fullName>
                </value>
                <value>
                    <fullName>Custom Code on Windows</fullName>
                </value>
                <value>
                    <fullName>Drupal</fullName>
                </value>
                <value>
                    <fullName>Informatica PowerCenter</fullName>
                </value>
                <value>
                    <fullName>Microsoft Office (Excel, Access)</fullName>
                </value>
                <value>
                    <fullName>Oracle Application Express</fullName>
                </value>
                <value>
                    <fullName>Oracle Business Intelligence</fullName>
                </value>
                <value>
                    <fullName>Oracle Database</fullName>
                </value>
                <value>
                    <fullName>Other Relational Database</fullName>
                </value>
                <value>
                    <fullName>Qlik Sense</fullName>
                </value>
                <value>
                    <fullName>Salesforce</fullName>
                </value>
                <value>
                    <fullName>SharePoint</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Application_Strategic_Plan__c</fullName>
        <description>Application Approval</description>
        <label>Application Strategic Plan</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Application_Sub_Objective__c</fullName>
        <description>Application Approval</description>
        <label>Application Sub-Objective</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approval_Routing_Options__c</fullName>
        <description>SF-182</description>
        <label>Select Training Official Routing Options</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Region 1</fullName>
                </value>
                <value>
                    <fullName>Region 2</fullName>
                </value>
                <value>
                    <fullName>Region 3</fullName>
                </value>
                <value>
                    <fullName>Region 4</fullName>
                </value>
                <value>
                    <fullName>Region 5</fullName>
                </value>
                <value>
                    <fullName>Region 6</fullName>
                </value>
                <value>
                    <fullName>Region 7</fullName>
                </value>
                <value>
                    <fullName>Region 8</fullName>
                </value>
                <value>
                    <fullName>Region 9</fullName>
                </value>
                <value>
                    <fullName>Region 10</fullName>
                </value>
                <value>
                    <fullName>Ann Arbor</fullName>
                </value>
                <value>
                    <fullName>Research Triangle Park</fullName>
                </value>
                <value>
                    <fullName>Cincinnati</fullName>
                </value>
                <value>
                    <fullName>HQ Office of Human Resources</fullName>
                </value>
                <value>
                    <fullName>OIG</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Approval_Step__c</fullName>
        <description>All</description>
        <label>Approval Step</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approver_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>FCO Appointment, Approval Process</description>
        <label>Approver 1</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Formsri88</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Approving_Official__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>EPA-PCOR</description>
        <label>Approving Official</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Forms3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Autopopulated_Employee_ID__c</fullName>
        <description>EPA-3160-6v5</description>
        <formula>Recipient_Name__r.Employee_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Autopopulated Employee ID #</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>B_Description__c</fullName>
        <defaultValue>&quot;I wish to donate hours of annual leave to the EPA Leave Bank and my donation does not exceed the minimum contribution limits.&quot;</defaultValue>
        <description>EPA3160-6v5</description>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>B_Extra_Hour_Donation__c</fullName>
        <description>EPA3160-6v5</description>
        <label>Extra Hour Donation</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>B__c</fullName>
        <defaultValue>false</defaultValue>
        <description>EPA3160-6v5</description>
        <label>B. Donate Hours (no waiver needed)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Badging_Office_Printed_Name__c</fullName>
        <description>EPA-3110-1</description>
        <label>Badging Office (Printed Name)</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Before_Award_Documentation__c</fullName>
        <defaultValue>&quot;(Competitive Vehicles Only)&quot;</defaultValue>
        <description>ORD-111</description>
        <label>Before Award Documentation</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Beginning_Date_of_Development_Activity__c</fullName>
        <description>SF-182</description>
        <formula>IF(ISBLANK(Training_Start_Date__c),
&quot;[Will be populated by Training Start Date field.]&quot;, 
TEXT(Training_Start_Date__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Beginning Date of Development Activity</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Instructions__c</fullName>
        <description>SF-182</description>
        <formula>CASE(Furnish_Invoice_to__c, 
  &quot;USEPA RTP Finance Center&quot;, 
        &quot;USEPA RTP Finance Center&quot;&amp;BR()&amp;
        &quot;Mail Code AA 216-01&quot;&amp;BR()&amp;
        &quot;4930 Old Page Road&quot;&amp;BR()&amp;
        &quot;Durham, NC 27703&quot;,
  &quot;USEPA Cincinnati Finance Center&quot;, 
        &quot;USEPA Cincinnati Finance Center&quot;&amp;BR()&amp;
        &quot;West Martin Luther King Dr&quot;&amp;BR()&amp;
        &quot;MS002&quot;&amp;BR()&amp;
        &quot;Cincinnati, Ohio 45268&quot;,
  &quot;Purchase Card Transaction&quot;,
        &quot;Purchase Card Holder’s Name: &quot;&amp; Select_Card_Holder__r.FirstName &amp;&quot; &quot;&amp; Select_Card_Holder__r.LastName &amp; BR() &amp;
        &quot;Purchase Card Holder’s Telephone Number: &quot;&amp; Card_Holder_s_Phone_Number__c,
&quot;[This field will populate after save.]&quot;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Billing Instructions</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Books_Materials__c</fullName>
        <description>SF-182</description>
        <label>Books &amp; Materials</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Branch__c</fullName>
        <description>PRIAv5</description>
        <label>Branch</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Budget_Office_Printed_Name__c</fullName>
        <description>EPA-3110-1</description>
        <label>Budget Office(Printed Name)</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Area__c</fullName>
        <description>Application Approval</description>
        <label>Business Area</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Services For Citizens</fullName>
                </value>
                <value>
                    <fullName>Mode of Delivery</fullName>
                </value>
                <value>
                    <fullName>Support Delivery of Services</fullName>
                </value>
                <value>
                    <fullName>Management of Government Resources</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>COTS_GOTS_Specified_for_Info_Resource__c</fullName>
        <description>Application Approval</description>
        <label>COTS/GOTS Specified for Info Resource</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>C_Comment__c</fullName>
        <description>EPA3160-6v5</description>
        <label>Comment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>C_Description__c</fullName>
        <defaultValue>&quot;I wish to donate hours of annual leave to the EPA Leave Bank (enter # hours below). My donation exceeds the minimum contribution limits and I am seeking a waiver for the following reasons: (Note: A waiver is required to do this. See instructions at the top of this form.)&quot;</defaultValue>
        <description>EPA3160-6v5</description>
        <label>Description</label>
        <length>275</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>C_Hours_Donated__c</fullName>
        <description>EPA3160-6v5</description>
        <label>Hours Donated</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>C_Reason__c</fullName>
        <description>EPA-3160-6v5</description>
        <label>Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>There is insufficient donated leave to carry the leave recipient through the period of the medical emergency.</fullName>
                </value>
                <value>
                    <fullName>I am a family member of the recipient and I wish to donate leave.</fullName>
                </value>
                <value>
                    <fullName>Enter reason in Comment field below:</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>C__c</fullName>
        <defaultValue>false</defaultValue>
        <description>EPA3160-6v5</description>
        <label>C. Donate Hours (waiver needed)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Card_Holder__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>EPA-PCOR</description>
        <label>Card Holder</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Forms4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Card_Holder_s_Email__c</fullName>
        <description>SF-182</description>
        <formula>IF( ISBLANK(Select_Card_Holder__c), 
&quot;&quot;, 
Select_Card_Holder__r.Email)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Card Holder&apos;s Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Card_Holder_s_Phone_Number__c</fullName>
        <description>SF-182</description>
        <formula>IF( ISBLANK(Select_Card_Holder__c), 
&quot;&quot;, 
 Select_Card_Holder__r.Phone )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Card Holder’s Phone Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Certification__c</fullName>
        <defaultValue>&quot;By signing this form you certify that all U.S. Government property has been returned and that all documentary materials, records(including documents that are responsive to a Freedom of Information Act(FOIA) request, litigation hold, or other legal hold) have been properly identified and transferred.  The statements made on this form and all attachments thereto are true, accurate, and complete.  You acknowledge that any knowingly false or misleading statement may be punishable by fine or imprisonment or both under applicable law.&quot;</defaultValue>
        <description>EPA-3110-1</description>
        <label>Certification</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Chemical_Name__c</fullName>
        <description>PRIAv5</description>
        <label>Chemical Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cincinnati_Finance_Center_printed_name__c</fullName>
        <description>EPA-3110-1</description>
        <label>Cincinnati Finance Center(printed name)</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cleared_1_Part_B__c</fullName>
        <description>EPA-3110-1</description>
        <label>Part B Cleared 1</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>NA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cleared_1_Part_C__c</fullName>
        <description>EPA-3110-1</description>
        <label>Part C Cleared 1</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>NA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cleared_2_Part_B__c</fullName>
        <description>EPA-3110-1</description>
        <label>Part B Cleared 2</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>NA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cleared_2_Part_C__c</fullName>
        <description>EPA-3110-1</description>
        <label>Part C Cleared 2</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>NA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cleared_3_Part_B__c</fullName>
        <description>EPA-3100-1</description>
        <label>Part B Cleared 3</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>NA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cleared_3_Part_C__c</fullName>
        <description>EPA-3110-1</description>
        <label>Part C Cleared 3</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>NA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cleared_Other__c</fullName>
        <description>EPA-3110-1</description>
        <label>Cleared Other</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>NA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cleared_Part_A_SF52__c</fullName>
        <description>EPA-3110-1</description>
        <label>Cleared</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Comment_s__c</fullName>
        <description>PRIAv5</description>
        <label>Comment(s)</label>
        <length>2500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Comments_1__c</fullName>
        <description>ORD-111, Application Approval</description>
        <label>Comments</label>
        <length>2500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Comments_2__c</fullName>
        <description>ORD-111</description>
        <label>Comments</label>
        <length>2500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Company__c</fullName>
        <description>PRIAv5</description>
        <label>Company</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Completed_By__c</fullName>
        <defaultValue>&quot;Shared Service Centers(SSC) Human Resources Office(HRO) Regional Human Resources Officers(RHRO) or Appropriate Designee&quot;</defaultValue>
        <description>EPA-3110-1</description>
        <label>Part E Completed By</label>
        <length>121</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Application Approval</description>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Forms (Contact)</relationshipLabel>
        <relationshipName>Forms1ai66</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Continue_In_Service_Agreement_Signature__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SF-182</description>
        <label>Continue In Service Agreement Signature</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Continue_In_Service_Digital_Signature__c</fullName>
        <description>SF-182</description>
        <inlineHelpText>Clicking the &quot;Continue In Service Agreement Signature&quot; checkbox will sign this section upon saving the form.</inlineHelpText>
        <label>Continue In Service Digital Signature</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Continued_Service_Agreement_Expiration__c</fullName>
        <description>SF-182</description>
        <label>Continued Service Agreement Expiration</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Continued_Service_Agreement_Expires__c</fullName>
        <description>SF-182</description>
        <formula>IF(ISBLANK(Continued_Service_Agreement_Expiration__c), 
&quot;[Will be populated by Continued Service Agreement Expiration field.]&quot;, 
TEXT(Continued_Service_Agreement_Expiration__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Continued Service Agreement Expires:</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Continued_Service_Agreement_Inst_Calc__c</fullName>
        <defaultValue>&quot;https://usepa.sharepoint.com/sites/OARM_Community/EPAU/Shared%20Documents/Forms/SF182%20Instructions.aspx&quot;</defaultValue>
        <description>SF-182</description>
        <label>Continued Service Agreement Inst &amp; Calc</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Continued_Service_Agreement__c</fullName>
        <description>SF-182</description>
        <label>Continued Service Agreement</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contract_Actions__c</fullName>
        <description>ORD-111</description>
        <label>Contract Actions:</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Contract</fullName>
                </value>
                <value>
                    <fullName>Delivery Order</fullName>
                </value>
                <value>
                    <fullName>Simplified Acquisition</fullName>
                </value>
                <value>
                    <fullName>Task Order</fullName>
                </value>
                <value>
                    <fullName>Work Assignment</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contractor__c</fullName>
        <description>ORD-111</description>
        <label>Contractor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Course_Number_Code__c</fullName>
        <description>SF-182</description>
        <label>Course Number Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Course_Title__c</fullName>
        <description>SF-182</description>
        <label>Course Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>no longer needed?</description>
        <label>Current Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Current_Approver</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Custodial_Property_Officer_Printed_Name__c</fullName>
        <description>EPA-3110-1</description>
        <label>Custodial Property Officer(Printed Name)</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>D_Description__c</fullName>
        <defaultValue>&quot;I wish to donate hours of annual leave to the qualified recipient named below. I certify that this employee is not my immediate supervisor. (Enter # of hours below.)&quot;</defaultValue>
        <description>EPA-3160-6v5</description>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>D_Hours_Donated__c</fullName>
        <description>EPA3160-6v5</description>
        <label>Hours Donated</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>D__c</fullName>
        <defaultValue>false</defaultValue>
        <description>EPA3160-6v5</description>
        <label>D. Donate to specific Person</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>